<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:keepScreenOn="true"
    tools:context="com.macys.assessment.activity.ExternalStorageScanActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_collapseMode="pin"
            app:statusBarScrim="?attr/colorPrimaryDark">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.macys.assessment.activity.ExternalStorageScanActivity"
        tools:showIn="@layout/activity_external_storage_scan">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/standard_left_right_margin"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/scanContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="left|start|center_vertical"
                    android:text="@string/msg_external_storage_scan"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="@dimen/fab_text_size" />

                <LinearLayout
                    android:id="@+id/scanResults"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/standard_left_right_margin"
                        android:background="@android:color/transparent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:text="@string/label_names_and_sizes_10_biggest_files"
                            android:textColor="?attr/colorPrimary"
                            android:textSize="@dimen/fab_text_size"
                            android:textStyle="bold" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/biggestFiles"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:nestedScrollingEnabled="false" />

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/standard_left_right_margin">

                        <TextView
                            android:id="@+id/averageFileSizeLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:background="@android:color/transparent"
                            android:text="@string/label_average_file_size"
                            android:textColor="?attr/colorPrimary"
                            android:textSize="@dimen/fab_text_size"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/averageFileSize"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:layout_toEndOf="@id/averageFileSizeLabel"
                            android:layout_toRightOf="@id/averageFileSizeLabel"
                            android:background="@android:color/transparent"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/fab_text_size" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/standard_left_right_margin"
                        android:background="@android:color/transparent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:text="@string/label_most_frequent_file_types"
                            android:textColor="?attr/colorPrimary"
                            android:textSize="@dimen/fab_text_size"
                            android:textStyle="bold" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/fileTypes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:nestedScrollingEnabled="false" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/progressContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/standard_left_right_margin"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:visibility="gone">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:padding="@dimen/progressText_padding" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:elevation="@dimen/standard_left_right_margin"
        android:padding="@dimen/standard_left_right_margin"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:elevation="0dp"
            app:fabSize="auto" />

        <TextView
            android:id="@+id/fab_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="@dimen/standard_left_right_margin"
            android:gravity="center"
            android:text="@string/label_start"
            android:textColor="@android:color/white"
            android:textSize="@dimen/fab_text_size" />

    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>
